vlib/v/checker/tests/return_missing_comp_if.vv
fn main() {}

fn foo() string {
	$if windows {
	} $else {
	}
}
